# trinity

./: Cargo.toml
modules/: Cargo.toml
modules/.cargo/: config.toml
modules/echo/: Cargo.toml
modules/echo/src/: lib.rs
modules/horsejs/src/: lib.rs
modules/ping/: Cargo.toml
modules/ping/src/: lib.rs
modules/pun/src/: lib.rs
modules/uuid/src/: lib.rs
modules/wit-log/src/: lib.rs
src/: main.rs  wasm.rs
wit/: exports.wit
