[workspace]
members = [
  "./uuid",
  "./horsejs",
  "./pun",
  "./wit-log",
  "./wit-sync-request",
  "./ping",
]

[workspace.dependencies]
wit-bindgen-guest-rust = {git = "https://github.com/bytecodealliance/wit-bindgen", rev = "aca3671"}
wit-log = {path = "./wit-log"}
wit-sync-request = {path = "./wit-sync-request"}
