[package]
edition = "2021"
name = "echo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version = "0.4.17", features = ["std"]}
wit-bindgen-guest-rust.workspace = true
wit-log.workspace = true

[lib]
crate-type = ["cdylib"]
